new: demo explaination

--- a/demo.cookie.access.token/hacker/public/hacker_page.html
+++ b/demo.cookie.access.token/hacker/public/hacker_page.html
@@ -20,7 +20,7 @@
     <p class="center red">Haha transfering money even if you don't want xD</p>
 
     <form action="http://127.0.0.1:9090/transfer_money" method="POST">
-        <input type="hidden" name="message" value="test">
+        <input type="hidden">
     </form>
 
     <script>
